# LinuxDev2020

./: README.md
03_TerminalProject/: Makefile  Show.c
04_Multfile/: Makefile
05_Environmental/: CMakeLists.txt  Window.c
06_Debugging/: double_free.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: configure.ac
08_TestingCoverage/tests/: Makefile.am  test_init.ts  test_push.ts
09_I18nL10n/: Makefile  guess_number.c  guess_number.po  guess_number.pot
11_Toolkits/: Makefile  text.txt  words_counter.c
12_ScriptingText/: configure.ac  readme.md
12_ScriptingText/src/: libbuf.c
12_ScriptingText/tests/: test_clear.ts  test_grow.ts  test_pop.ts
13_PatchInstall/: Makefile  guess_number.c  guess_number.po  guess_number.pot  readme.md
13_PatchInstall/ru/LC_MESSAGES/: guess_number.mo
